[package]
name = "ublk-rs"
version = "0.1.0"
edition = "2021"
author = "Andreas Hindborg"
license = "MIT / Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = [ "derive" ] }
io-uring = "0.6.0"
#io-uring = "0.5.13"
memmap2 = "0.6.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
#tokio-uring = { path = "../../tokio-uring" }
ublk-sys = { path = "../ublk-sys" }
